<resources>
    <string name="app_name">MobileLab</string>
    <string name="login">Have account? <u><b>Login</b></u></string>
    <string name="signup">Have not an account?<u><b>Register now</b></u></string>
    <string name="loginHint">Login</string>
    <string name="welcoming">Welcome!</string>
    <string name="out">Sign out</string>
    <string name="memberText"></string>
    <string name="accText">Create account</string>
    <string name="email">Email</string>
    <string name="emailError">Enter a valid email</string>
    <string name="passError"></string>
    <string name="password">Password</string>
    <string name="authError">Authentication failed</string>
    <string name="checkError">Please check your email and password</string>
    <string name="no_internet">No Internet connection</string>
    <string name="failure">Update failure</string>
    <string name="sensor_name">Sensor name</string>
    <string name="profile_picture">Profile picture</string>
    <string name="update">Update</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="logout">Log Out</string>
    <string name="tab2">Tab #2</string>
    <string name="sensor_type">Sensor type</string>
    <string name="error">Error</string>
    <string name="image_uploaded">Your image is uploaded</string>
    <string name="username_updated">Username updated</string>
    <string name="email_updated">Email updated</string>
    <string name="enter_username">Enter usename, please</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>

    <string name="default_notification_channel_name">Sensor</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_subscribe_failed">Failed</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
