<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ProfileFragment"
    android:paddingLeft="24dp"
    android:background="@color/myRed"
    android:paddingRight="24dp">

    <ImageView
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:id="@+id/profile_picture_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/profile_picture" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:id="@+id/upload_pic"
        android:text="@string/update" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fafafa"
        android:id="@+id/fragment_profile_name"
        android:layout_gravity="center"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_profile_email"
        android:textColor="#fafafa"
        android:layout_gravity="center"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_profile_layout_new_email"
        android:textColorHint="@color/inputBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"

        app:errorTextAppearance="@color/errColor"
        android:hint="@string/enter_new_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/fragment_profile_new_email"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/email_submit_btn"
        android:textColor="@color/colorPrimaryDark" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_profile_layout_new_username"
        android:textColorHint="@color/inputBack"
        android:textColor="#fafafa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"

        app:errorTextAppearance="@color/errColor"
        android:hint="@string/enter_new_username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/fragment_profile_new_username"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/update"
        android:id="@+id/name_submit_btn"
        android:textColor="@color/colorPrimaryDark" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/logout"
        android:id="@+id/logout_btn"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>